# umf_on_cylinder_final

./: CMakeLists.txt  README  umf_cylinder_detector_test.cpp
original_umf/: CMakeLists.txt
umf_cylinder_detector/: CMakeLists.txt  detector.cpp  detector.h  lines_clustering.cpp  parabolas_clustering.cpp  standart_deviation.h
